force-app/main/default/objects/OA_Monthly_Budget__c/OA_Monthly_Budget__c.object-meta.xml
<CustomObject>
    <label>Monthly Budget</label>
    <nameField>
        <displayFormat>MB-{000000}</displayFormat>
        <label>Monthly Budget</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Budget</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>