force-app/main/default/objects/OA_Monthly_Budget__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <label>January</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>