force-app/main/default/objects/OA_Monthly_Budget__c/fields/OA_Budget__c.field-meta.xml
<CustomField>
    <fullName>OA_Budget__c</fullName>
    <label>Budget</label>
    <referenceTo>OA_Budget__c</referenceTo>
    <relationshipLabel>Monthly Distribution</relationshipLabel>
    <relationshipName>Monthly_Budget</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>