force-app/main/default/objects/OA_Monthly_Budget__c/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <label>September</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>